--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "solid-js": "^1.9.3",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^3.4.17"
