--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "**/*"
   ],
   "exclude": [
-    "dist"
+    "dist",
+    "src/pages/cinema.astro"
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
