--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.1.4",
     "@astrojs/tailwind": "^5.1.4",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.6",
