--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "react-responsive-carousel": "^3.2.23",
     "solid-js": "^1.9.3",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "@types/uuid": "^10.0.0"
   }
 }
